Fixed alignment issue of version selection box

--- a/apps/publisher/themes/default/css/custom-theme.css
+++ b/apps/publisher/themes/default/css/custom-theme.css
@@ -186,6 +186,33 @@ a.ctrl-filter-category:hover {
 }
 
 
+.version-dropdown-menu{
+}
+
+.wr-version-selection .dropdown-menu {
+    border:0px solid #237bd5;
+    background:#237bd5;
+    top:190px;
+    left:0px;
+    width:230px;
+    padding-top:0;
+    padding-bottom:0;
+    color:#fff;
+    font-size:17px;
+}
+
+.wr-version-selection .dropdown-menu li a {
+    padding-top:7px;
+    padding-bottom:7px;
+    font-weight:100;
+    color:#fff;
+}
+
+.wr-version-selection .dropdown-menu li a:hover {
+    background:#61a3e6;
+}
+
+
 /* testing */
 
 /*GROW*/
